--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="@color/white_smoke"
+    android:elevation="2dp"
+    android:background="@drawable/chat_bubble_gray"
     app:layout_behavior = "@string/appbar_scrolling_view_behavior"
     >
 
@@ -19,7 +20,8 @@
             android:textSize="@dimen/txt_14sp"
             android:layout_marginBottom="@dimen/pad_20dp"
             android:maxLines="4"
-            />
+            android:layout_marginLeft="@dimen/pad_chat_item"
+            android:layout_marginTop="@dimen/pad_chat_item1" />
 
     <!-- View for the senders name-->
         <TextView
