--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:elevation="2dp"
-    android:background="@drawable/chat_bubble_gray"
+    android:background="@color/white_smoke"
     app:layout_behavior = "@string/appbar_scrolling_view_behavior"
     >
 
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:text="Sender Name"
             android:textColor="@color/black"
-            android:layout_gravity="right" />
+            android:layout_gravity="right"
+            android:layout_marginRight="@dimen/pad_chat_item" />
     <!-- View for the timestamp-->
         <TextView
             android:id="@+id/timestamp_content"
@@ -38,5 +39,6 @@
             android:layout_height="wrap_content"
             android:text="Time Stamp"
             android:textColor="@color/main_color_gray"
-            android:layout_gravity="right" />
+            android:layout_gravity="right"
+            android:layout_marginRight="@dimen/pad_chat_item" />
 </LinearLayout>
